<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quit_btn_asid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_add_ps" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/sure_btn_asid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure_add_ps"
            android:textColor="#efaa4e" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#9e9e9e" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_psid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/add_passenger"
            android:textColor="#fdaf46"
            android:textSize="18sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />

        <TextView
            android:id="@+id/flush_psid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/refresh_passenger"
            android:textColor="#fdaf46"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/addpsw_animationIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5px"
        android:src="@drawable/pic_loading" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_aps_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/contacts_tip_img"
                    android:layout_width="45dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/trip_train_vector_drawable_icon_list_empty"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/contacts_tip_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_user_under_the_account"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/view_aps_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:overScrollMode="never" />

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>