<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b1b3af"
        android:gravity="center_vertical"
        android:paddingTop="4dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/date_pick_left_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="6dp"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/trip_train_date_left" />

            <TextView
                android:id="@+id/before_day_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_yesterday"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/layout_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16sp"
                android:layout_height="16sp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/trip_train_date_icon" />

            <Button
                android:id="@+id/btn_tstart_date"
                style="@style/NormalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1-21 wednesday" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:src="@drawable/trip_train_vector_drawable_calendar_down_arrow"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/date_pick_right_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/next_day_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/btn_tomorrow"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:layout_width="6dp"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/trip_train_date_right" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/reserve_animationIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5px"
            android:src="@drawable/pic_loading" />

         <ImageView
             android:id="@+id/reserve_tips_img"
             android:layout_width="50dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:visibility="gone"
             android:background="@drawable/trip_train_vector_drawable_icon_list_empty"/>

        <TextView
            android:id="@+id/reserve_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/no_trip_line" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh_contact_paths"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/view_contact_paths"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never" />

            </LinearLayout>
        </android.support.v4.widget.SwipeRefreshLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:background="#efefef"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="50dp">
    
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/early_time_fid"
                    android:layout_width="83dp"
                    android:layout_height="30dp"
                    android:text="@string/early_time_fid"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@drawable/btn_text_color"
                    android:background="@drawable/btn_left_radius" />
                <Button
                    android:id="@+id/total_time_fid"
                    android:layout_width="83dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="-2dp"
                    android:layout_marginEnd="-2dp"
                    android:textAllCaps="false"
                    android:text="@string/total_time_fid"
                    android:gravity="center"
                    android:textColor="@drawable/btn_text_color"
                    android:background="@drawable/btn_no_radius"/>
                <Button
                    android:id="@+id/arrive_time_fid"
                    android:layout_width="83dp"
                    android:layout_height="30dp"
                    android:text="@string/arrive_time_fid"
                    android:textColor="@drawable/btn_text_color"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_right_radius" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/select_fid"
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:textAllCaps="false"
                    android:text="@string/select_fid"
                    android:gravity="center"
                    android:textColor="@drawable/btn_text_color"
                    android:background="@drawable/btn_both_radius" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>